# Bag-of-Visual-Words

./: .gitignore  CMakeLists.txt  REAME.md  compile_commands.json
include/: place_recognition.hpp
lib/: CMakeLists.txt
lib/bow_histogram/include/bow_histogram/: bow.hpp
lib/bow_histogram/src/: bow.cpp
lib/htmlwriter/: html_writer.cpp
lib/htmlwriter/include/htmlwriter/: html_writer.hpp
lib/imagebrowser/: image_browser.cpp
lib/imagebrowser/include/imagebrowser/: image_browser.hpp
lib/serialization/include/serialization/: convert_dataset.hpp
lib/serialization/src/: convert_dataset.cpp  serialize.cpp
src/: place_recognition.cpp
